handle collapse when having many presetItem and fix bug: handle delete presetName

--- a/src/pages/TISC/Product/Presets/styles/PresetItem.less
+++ b/src/pages/TISC/Product/Presets/styles/PresetItem.less
@@ -1,36 +1,19 @@
 .preset {
   margin-top: 16px;
-  padding-bottom: 8px;
-  border-bottom: 0.5px solid rgb(191, 191, 191);
-  .field {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    &__title {
-      display: flex;
-      align-items: center;
-    }
-    &__add_icon {
-      cursor: pointer;
-    }
-    &__delete_icon {
-      cursor: pointer;
-      &:hover {
-        path {
-          fill: @primary-color-dark;
-        }
-      }
-    }
+  :global(.ant-collapse-header-text) {
+    width: 100%;
   }
-  .formName {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    .input {
-      :global(.ant-input) {
-        color: @primary-color-dark;
-      }
-    }
+  :global(.ant-collapse > .ant-collapse-item > .ant-collapse-header) {
+    padding: 0;
+  }
+  :global(.ant-collapse-content > .ant-collapse-content-box) {
+    padding: 0;
+  }
+  :global(.ant-collapse-ghost
+      > .ant-collapse-item
+      > .ant-collapse-content
+      > .ant-collapse-content-box) {
+    padding: 0;
   }
   .form {
     display: flex;
@@ -60,5 +43,67 @@
         }
       }
     }
+    &__delete_icon {
+      cursor: pointer;
+      path {
+        transition: fill 1s;
+        fill: @mono-color-medium;
+      }
+      &:hover {
+        path {
+          fill: @primary-color-dark;
+        }
+      }
+    }
   }
+}
+
+.panel_header {
+  width: 100%;
+  &__field {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    &_title {
+      display: flex;
+      gap: 8px;
+      align-items: center;
+      &_icon {
+        transition: all 0.3s;
+      }
+    }
+  }
+  &__input {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 32px;
+    &_value {
+      flex: 1;
+      :global(.ant-input) {
+        color: @primary-color-dark;
+      }
+    }
+    &_delete_icon {
+      cursor: pointer;
+      path {
+        transition: fill 1s;
+        fill: @mono-color-medium;
+      }
+      &:hover {
+        path {
+          fill: @primary-color-dark;
+        }
+      }
+    }
+  }
+}
+
+.font_weight_600 {
+  font-weight: 600;
+}
+
+.font_weight_300 {
+  font-weight: 300;
 }
